--- a/FAQs.html
+++ b/FAQs.html
@@ -173,7 +173,7 @@
         </ul> -->
         </li>
         <li class="">
-        <a href="service1.html">SERVICE</a>
+        <a href="service1.html">SERVICES</a>
         <!-- <ul class="sub-menu">
         <li class="menu-item-has-children">
         <a href="javascript:void(0);">Portfolio Page</a>
@@ -385,8 +385,9 @@
     <div class="col-md-6">
         <div >
             <div class="contact_form contactPageForm">
-            <h2 class="secTitle02">FeedBack</h2>
-            <form action="#" method="post" class="row" id="contact_form">
+                <img src="./assets/images/me/mmm2.jpg" alt="" />
+            <!-- <h2 class="secTitle02">FeedBack</h2> -->
+            <!-- <form action="#" method="post" class="row" id="contact_form">
             <div class="col-md-6">
             <input class="required" type="text" name="con_name" placeholder="Your Name *">
             <input class="required" type="email" name="con_email" placeholder="Email Address *">
@@ -399,7 +400,7 @@
             <button type="submit" class="berpo_btn"><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-shape"></span><span class="bp-text">Send Us Message</span></button>
             <div class="con_message"></div>
             </div>
-            </form>
+            </form> -->
             </div>
             </div>
     </div>
@@ -551,7 +552,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="row">
     <div class="col-lg-4 col-md-5">
     <div class="subTitle">Get In Touch With</div>
-    <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
+    <h2 class="secTitle quiver-text">Quiver Trust Limited</h2>
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
