--- a/about1.html
+++ b/about1.html
@@ -172,7 +172,7 @@
         </ul> -->
         </li>
         <li class="">
-        <a href="service1.html">SERVICE</a>
+        <a href="service1.html">SERVICES</a>
         <!-- <ul class="sub-menu">
         <li class="menu-item-has-children">
         <a href="javascript:void(0);">Portfolio Page</a>
@@ -347,7 +347,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 </div>
 <div class="col-lg-7">
 <div class="abpageThumb">
-<img src="assets/images/me/unlockman.webp" alt>
+<img src="assets/images/me/free.jpg" alt>
 <div class="abInner">
 <img src="assets/images/me/bbbcon.jpg" alt>
 </div>
@@ -372,7 +372,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <div class="ibMeta">
 <img src="assets/images/service/4.png" alt>
 </div>
-<h3><a href="single-service.html">Loan</a></h3>
+<h3><a href="single-service.html">Loans</a></h3>
 <p>At Quiver Trust, we make the loan application process simple, quick, and hassle-free. Whether you need financial assistance for personal needs, business expansion, or unforeseen expenses, we are here to help you every step of the way.</p>
 
 </div>
@@ -393,7 +393,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <img src="assets/images/service/6.png" alt>
 </div>
 <h3><a href="single-service.html">Business Advisory</a></h3>
-<p>At Quiver Trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business consulting services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
+<p>At Quiver Trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business advisory services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
 
 </div>
 </div>
@@ -619,7 +619,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <div class="row">
     <div class="col-lg-4 col-md-5">
     <div class="subTitle">Get In Touch With</div>
-    <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
+    <h2 class="secTitle quiver-text">Quiver Trust Limited</h2>
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
