--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </ul> -->
 </li>
 <li class="">
-<a href="service1.html">SERVICE</a>
+<a href="service1.html">SERVICES</a>
 <!-- <ul class="sub-menu">
 <li class="menu-item-has-children">
 <a href="javascript:void(0);">Portfolio Page</a>
@@ -366,9 +366,9 @@
 <section class="slider_01">
 <div class="rev_slider_wrapper">
 <div id="rev_slider_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.4.1">
-<ul>
+<ul style="background-color: #e7e5e5 ">
 <li data-index="rs-3049" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
-<img src="assets/images/me/paintmoney.webp" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+<!-- <img src="assets/images/me/paintmoney.webp" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina> -->
 <div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solution</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:2000,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]">Welcome to<span class="prcolor"> Quiver Trust Limited </span>
@@ -381,7 +381,7 @@
 </div>
 </li>
 <li data-index="rs-3050" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
-<img src="assets/images/me/paintwoman.webp" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+<!-- <img src="assets/images/me/paintwoman.webp" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina> -->
 <div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solution</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:1800,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]">Empower Your Dreams <span class="prcolor">  with Easy Financing</span>
@@ -427,7 +427,7 @@
   <img src="assets/images/service/4.png" alt>
   </div>
   <h3><a href="single-service.html">Borrowing</a></h3>
-  <p>invest in your dreams with our Finance solutions.</p>
+  <p>Invest in your dreams with our finance solutions.</p>
   
   </div>
   </div>
@@ -446,8 +446,8 @@
   <div class="ibMeta">
   <img src="assets/images/service/6.png" alt>
   </div>
-  <h3><a href="single-service.html">Business Consultation</a></h3>
-  <p> your expert partners for your successful business.</p>
+  <h3><a href="single-service.html">Business advisory</a></h3>
+  <p> Your expert partners for your successful business.</p>
   
   </div>
   </div>
@@ -815,7 +815,7 @@ We craft unique digital experiences. With more than 7<br> years of expertise.
     <div class="container mt-5">
       <div class="interactive-card">
           <div>
-              <h5 class="title">Business</h5>
+              <h5 class="title">Growth</h5>
               <p class="text">Partner with us to reach your business and personal financial targets with speed and ease.</p>
               <div class="sub-title">
                   <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1226,7 +1226,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 </div>
 </div>
 <div class="row">
-<div class="col-md-6">
+<!-- <div class="col-md-6">
 <div class="accordion bepAccordion" id="befAccordion01">
 <div class="card">
 <div class="card-header" id="ma_ac_01">
@@ -1274,29 +1274,29 @@ The money will be added to your account different.
 </div>
 </div>
 </div>
-</div>
-<div class="col-md-6">
+</div> -->
+<div class="col-lg-12 col-md-6">
 <div class="testimonialslider01 owl-carousel">
 <div class="testiItem01">
-<h5>Provide Awesome Customer</h5>
-<p class="quotation">
+<h5 class="text-center">Provide Awesome Customer</h5>
+<p class="quotation text-center">
 We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers with exceptional service.
 </p>
 <div class="ts_author">
 <img src="" alt>
-<h5>Matt Sanchzi</h5>
-<span>ThemeForest Exclusive</span>
+<h5 class="text-center">Ogungbuyi Victor</h5>
+<span class="text-center">New Horizon</span>
 </div>
 </div>
 <div class="testiItem01">
-<h5>Provide Awesome Customer</h5>
-<p class="quotation">
+<h5 class="text-center">Provide Awesome Customer</h5>
+<p class="quotation text-center">
 We craft unique digital experiences. With more than 7 years of expertise we design and code clean websites, We are committed to providing our customers with exceptional service.
 </p>
 <div class="ts_author">
 <img src="" alt>
-<h5>Mark Smith</h5>
-<span>Envato Author</span>
+<h5 class="text-center">Ola Segun</h5>
+<span class="text-center">Developer</span>
 </div>
 </div>
 </div>
@@ -1454,7 +1454,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="row">
 <div class="col-lg-4 col-md-5">
 <div class="subTitle">Get In Touch With</div>
-<h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
+<h2 class="secTitle quiver-text">Quiver Trust Limited</h2>
 </div>
 <div class="col-lg-8 col-md-7">
 <div class="SubsrcribeForm">
