--- a/service1.html
+++ b/service1.html
@@ -225,7 +225,7 @@
     </ul> -->
     </li>
     <li class="">
-    <a href="service1.html">SERVICE</a>
+    <a href="service1.html">SERVICES</a>
     <!-- <ul class="sub-menu">
     <li class="menu-item-has-children">
     <a href="javascript:void(0);">Portfolio Page</a>
@@ -923,7 +923,7 @@
     <div class="row">
     <div class="col-lg-4 col-md-5">
     <div class="subTitle">Get In Touch With</div>
-    <h2 class="secTitle quiver-text">Quiver Trust Limited Company</h2>
+    <h2 class="secTitle quiver-text">Quiver Trust Limited</h2>
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
