--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
 <div class="container largeContainer">
 <div class="row">
 <div class="col-md-9">
-<p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#bdcec8cdcdd2cfc9fdd8d0dcd4d193ded2d0">Mail: <span class="__cf_email__" data-cfemail="8dfef8fdfde2fff9cde8e0ece4e1a3eee2e0">info@quivertrustltd.com.ng
+<p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#bdcec8cdcdd2cfc9fdd8d0dcd4d193ded2d0" style="color:black">Mail: <span class="__cf_email__" data-cfemail="8dfef8fdfde2fff9cde8e0ece4e1a3eee2e0" style="color:black">info@quivertrustltd.com.ng
 </span></a></p>
-<p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Phone: +2347025251599
+<p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909" style="color:black">Phone: +2347025251599
 </a></p>
 </div>
 <!-- <div class="col-md-3">
@@ -300,8 +300,8 @@
 </section>
 
 
-<section class="page_banner" style="background-image: url(assets/images/me/unlock6.webp);">
-<div class="overlay"></div>
+<section class="page_banner" style="background-image: url(assets/images/bg/8.png);">
+<div class="overla"></div>
 <div class="container largeContainer">
 <div class="row">
 <div class="col-md-12 text-center">
