--- a/about1.html
+++ b/about1.html
@@ -296,8 +296,8 @@
 </section>
 
 
-<section class="page_banner" style="background-image: url(assets/images/me/unlock6.webp);">
-<div class="overlay"></div>
+<section class="page_banner" style="background-image: url(assets/images/bg/6.png);">
+<div class="overla"></div>
 <div class="container largeContainer">
 <div class="row">
 <div class="col-md-12 text-center">
