--- a/FAQs.html
+++ b/FAQs.html
@@ -53,23 +53,23 @@
 </div>
 
 
-<section class="topbar01">
+<!-- <section class="topbar01">
     <div class="container largeContainer">
     <div class="row">
     <div class="col-md-9">
     <p><i class="bpro-mail-2"></i><a href="https://themewar.com/cdn-cgi/l/email-protection#73000603031c010733161e121a1f5d101c1e">Mail: <span class="__cf_email__" data-cfemail="e99a9c9999869b9da98c84888085c78a8684">info@quivertrustltd.com.ng</span></a></p>
     <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Phone: +2348060875751</a></p>
     </div>
-    <!-- <div class="col-md-3">
+    <div class="col-md-3">
     <div class="topsocial">
     <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
     <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
     <a href="javascript:void(0);"><i class="twi-twitter-square"></i></a>
     </div>
-    </div> -->
     </div>
     </div>
-    </section>
+    </div>
+</section> -->
 
 
     <header class="header01 isSticky">
