--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 </div>
 </div>
 
-
+<!-- 
 <section class="topbar01">
 <div class="container largeContainer">
 <div class="row">
@@ -64,16 +64,16 @@
 <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909" style="color:black">Phone: +2347025251599
 </a></p>
 </div>
-<!-- <div class="col-md-3">
+<div class="col-md-3">
 <div class="topsocial">
 <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
 <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
 <a href="javascript:void(0);"><i class="twi-twitter-square"></i></a>
 </div>
-</div> -->
 </div>
 </div>
-</section>
+</div>
+</section> -->
 
 
 <header class="header01 isSticky">
