--- a/service1.html
+++ b/service1.html
@@ -103,7 +103,7 @@
 </div>
 </div>
 
-
+<!-- 
 <section class="topbar01">
 <div class="container largeContainer">
 <div class="row">
@@ -112,7 +112,7 @@
 </span></a></p>
 <p><i class="bpro-phone-ringing"></i><a href="tel:+1245698909">Office: +2347025251599</a></p>
 </div>
-<!-- <div class="col-md-3">
+<div class="col-md-3">
 <div class="topsocial">
 <a href="javascript:void(0);"><i class="twi-facebook-square"></i></a>
 <a href="javascript:void(0);"><i class="twi-pinterest"></i></a>
@@ -120,8 +120,8 @@
 </div>
 </div>
 </div>
-</div> -->
-</section>
+</div>
+</section> -->
 
 
 <header class="header01 isSticky">
@@ -828,7 +828,7 @@
 </section> -->
 
 
-<section class="ctaSection01 abCTA">
+<!-- <section class="ctaSection01 abCTA">
 <div class="container largeContainer">
 <div class="row">
 <div class="col-xl-7">
@@ -844,7 +844,7 @@
 <ul class="listItem jostFont">
 <li><i class="twi-plus-circle"></i>Loan Planning</li>
 <!-- <li><i class="twi-plus-circle"></i>Investing</li> -->
-<li><i class="twi-plus-circle"></i>Business Advisory</li>
+<!-- <li><i class="twi-plus-circle"></i>Business Advisory</li>
 </ul>
 </div>
 <div class="col-md-6 text-right">
@@ -860,7 +860,7 @@
 </div>
 </div>
 </div>
-</section>
+</section> -->
 
 <footer class="footer_01">
     <div class="container largeContainer">
