--- a/about1.html
+++ b/about1.html
@@ -410,13 +410,13 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
     <img src="assets/images/home2/2.png" alt>
     <i class="twi-arrow-to-top"></i>
     <h5>Mission</h5>
-    <a>To empower businesses with innovative solutions, expert guidance, and strategic insights that drive growth, enhance efficiency, and create lasting value. We are committed to transforming challenges into opportunities and enabling our clients to achieve their full potential.</a>
+    <a>Our mission is to provide trusted financial solutions through lending, investment oppoutunities, and expert consulting, all designed to help you achieve your goals while building lasting,reliable relationships.</a>
     </div>
     <div style="height: fit-content; color:aliceblue;" class="ctaboxItem">
     <img src="assets/images/home2/3.png" alt>
     <i class="twi-coins"></i>
     <h5>Vision</h5>
-    <a>To be a trusted partner and global leader in business consulting, recognized for our dedication to excellence, client success, and sustainable innovation. We aim to shape the future of businesses by delivering impactful solutions and fostering long-term relationships.</a>
+    <a>To be your most trusted ally in delivering financial solutions and your first choice for every financial need.</a>
     </div>
     </div>
     </div>
