--- a/FAQs.html
+++ b/FAQs.html
@@ -266,7 +266,7 @@
         <span class="bp-shape"></span>
         <span class="bp-shape"></span>
         <span class="bp-shape"></span>
-        <span class="bp-text">Contact Us</span>
+        <span style="font-size:20px;" class="bp-text">Contact Us</span>
         </a>
         </div>
         </div>
@@ -296,18 +296,18 @@
 </div>
 </section>
 
-
+<!-- 
 <section class="page_banner" style="background-image: url(assets/images/bg/8.png);">
 <div class="overla"></div>
 <div class="container largeContainer">
 <div class="row">
 <div class="col-md-12 text-center">
 <h2 class="banner-title">Frequently Ask Questions</h2>
-<!-- <p class="breadcrumbs"><a href="index.html">Home</a><span>-</span>Pages<span>-</span>About Us 01</p> -->
+<p class="breadcrumbs"><a href="index.html">Home</a><span>-</span>Pages<span>-</span>About Us 01</p>
 </div>
 </div>
 </div>
-</section>
+</section> -->
 
 <section class="testimonialSection01">
     <div class="container largeContainer">
