--- a/about1.html
+++ b/about1.html
@@ -265,7 +265,7 @@
         <span class="bp-shape"></span>
         <span class="bp-shape"></span>
         <span class="bp-shape"></span>
-        <span class="bp-text">Contact Us</span>
+        <span style="font-size:20px;" class="bp-text">Contact Us</span>
         </a>
         </div>
         </div>
@@ -430,7 +430,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <div class="row">
 <div class="col-lg-12 text-center">
 <!-- <div class="subTitle">Our Memebers</div> -->
-<h2 class="secTitle">Our team</h2>
+<h2 class="secTitle">Our CEO</h2>
 </div>
 </div>
 <div class="row">
