--- a/contact.html
+++ b/contact.html
@@ -270,7 +270,7 @@
     <span class="bp-shape"></span>
     <span class="bp-shape"></span>
     <span class="bp-shape"></span>
-    <span class="bp-text">Contact Us</span>
+    <span style="font-size:20px;" class="bp-text">Contact Us</span>
     </a>
     </div>
     </div>
