--- a/contact.html
+++ b/contact.html
@@ -159,7 +159,7 @@
     </div> -->
     </li>
     <li class="">
-    <a href="about1.html">ABOUT</a>
+    <a href="about1.html">ABOUT US</a>
     <!-- <ul class="sub-menu">
     <li class="menu-item-has-children">
     <a href="javascript:void(0);">Services Page</a>
@@ -198,9 +198,9 @@
     </li>
     </ul> -->
     </li>
-      <li class="sub-menu">
+      <!-- <li class="sub-menu">
     <a href="FAQs.html">FAQs</a>
-    <!-- <ul class="sub-menu">
+    <ul class="sub-menu">
     <li class="menu-item-has-children">
     <a href="javascript:void(0);">Safe Lock</a>
     <ul class="sub-menu">
@@ -227,8 +227,8 @@
     </ul>
     </li>
     
-    </ul>  -->
-    </li> 
+    </ul> 
+    </li>  -->
     <!-- <li class="">
     <a href="blog1.html">BLOG</a>
     <ul class="sub-menu">
@@ -270,7 +270,7 @@
     <span class="bp-shape"></span>
     <span class="bp-shape"></span>
     <span class="bp-shape"></span>
-    <span style="font-size:20px;" class="bp-text">Contact Us</span>
+    <span style="font-size:25px;" class="bp-text">Contact Us</span>
     </a>
     </div>
     </div>
@@ -382,14 +382,13 @@
 </div>
 </section>
 
-
 <footer class="footer_01">
   <div class="container largeContainer">
   <div class="row">
   <div class="col-md-6 col-xl-4">
   <div class="aboutWidget">
-  <a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-  <p>Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+  <a href="index.html"><img src="assets/images/rmlogo.png" alt></a>
+  <p style="color: black;">Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
   </p>
   </div>
   </div>
@@ -417,12 +416,12 @@
   <div class="col-md-6 col-xl-4">
   <div class="widget">
   <!-- <div class="wsubtitle">Clean & Flexible</div> -->
-  <h3 class="widget_title">Quick Links</h3>
+  <h3 style="color: black;" class="widget_title">Quick Links</h3>
   <ul class="menu">
-  <li><a href="index.html">HOME</a></li>
-  <li><a href="about1.html">ABOUT</a></li>
-  <li><a href="service1.html">SERVICES</a></li>
-  <li><a href="FAQs.html">FAQs</a></li>
+  <li><a style="color: black;" href="index.html">HOME</a></li>
+  <li><a style="color: black;" href="about1.html">ABOUT</a></li>
+  <li><a style="color: black;" href="service1.html">SERVICES</a></li>
+  <li><a style="color: black;" href="FAQs.html">FAQs</a></li>
   <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
   </ul>
   </div>
@@ -430,10 +429,10 @@
   <div class="col-md-6 col-xl-4">
   <div class="widget gallery">
   <!-- <div class="wsubtitle">Contact us</div> -->
-  <h3 class="widget_title">Contact us</h3>
-  <div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent Mende, Maryland, Lagos.</div>
-  <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
-  <div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
+  <h3 style="color: black;" class="widget_title">Contact us</h3>
+  <div class="abIcon" style="color: black;"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
+  <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: #000;">info@quivertrustltd.com.ng</a></div>
+  <div class="abIcon" style="color: black;"><i class="twi-phone"></i>+2348060875751</div>
   
   </div>
   </div>
@@ -464,7 +463,7 @@
   </div>
   </div>
   </div>
-</footer>
+  </footer>
     
 
 <a href="javascript:void(0);" id="backtotop"><i class="twi-arrow-to-top1"></i></a>
