--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 </div> -->
 </li>
 <li class="">
-<a href="about1.html">ABOUT</a>
+<a href="about1.html">ABOUT US</a>
 <!-- <ul class="sub-menu">
 <li class="menu-item-has-children">
 <a href="javascript:void(0);">Services Page</a>
@@ -260,9 +260,9 @@
 </li>
 </ul> -->
 </li>
-  <li class="sub-menu">
+  <!-- <li class="sub-menu">
 <a href="FAQs.html">FAQs</a>
-<!-- <ul class="sub-menu">
+ul class="sub-menu">
 <li class="menu-item-has-children">
 <a href="javascript:void(0);">Safe Lock</a>
 <ul class="sub-menu">
@@ -289,8 +289,8 @@
 </ul>
 </li>
 
-</ul>  -->
-</li> 
+</ul> 
+</li>  -->
 <!-- <li class="">
 <a href="blog1.html">BLOG</a>
 <ul class="sub-menu">
@@ -332,7 +332,7 @@
 <span class="bp-shape"></span>
 <span class="bp-shape"></span>
 <span class="bp-shape"></span>
-<span style="font-size:20px;" class="bp-text">Contact Us</span>
+<span style="font-size:25px;" class="bp-text">Contact Us</span>
 </a>
 </div>
 </div>
@@ -369,7 +369,7 @@
 <ul>
 <li data-index="rs-3049" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
 <img src="assets/images/bg/6.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
-<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solution</span>
+<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solutions</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:2000,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="prcolor">Welcome to Quiver Trust Limited </span>
 </div>
@@ -382,7 +382,7 @@
 </li>
 <li data-index="rs-3050" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
 <img src="assets/images/bg/8.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
-<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solution</span>
+<div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solutions</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:1800,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"> <span class="prcolor">Empower Your Dreams  with Easy Financing</span>
 </div>
@@ -1402,8 +1402,8 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="row">
 <div class="col-md-6 col-xl-4">
 <div class="aboutWidget">
-<a href="index.html"><img src="assets/images/QTLOGO123.png" alt></a>
-<p>Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
+<a href="index.html"><img src="assets/images/rmlogo.png" alt></a>
+<p style="color: black;">Welcome to Quiver Trust, a trusted microfinance company dedicated to transforming lives and empowering communities through innovative financial solutions.
 </p>
 </div>
 </div>
@@ -1431,12 +1431,12 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="col-md-6 col-xl-4">
 <div class="widget">
 <!-- <div class="wsubtitle">Clean & Flexible</div> -->
-<h3 class="widget_title">Quick Links</h3>
+<h3 style="color: black;" class="widget_title">Quick Links</h3>
 <ul class="menu">
-<li><a href="index.html">HOME</a></li>
-<li><a href="about1.html">ABOUT</a></li>
-<li><a href="service1.html">SERVICES</a></li>
-<li><a href="FAQs.html">FAQs</a></li>
+<li><a style="color: black;" href="index.html">HOME</a></li>
+<li><a style="color: black;" href="about1.html">ABOUT</a></li>
+<li><a style="color: black;" href="service1.html">SERVICES</a></li>
+<li><a style="color: black;" href="FAQs.html">FAQs</a></li>
 <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
 </ul>
 </div>
@@ -1444,10 +1444,10 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <div class="col-md-6 col-xl-4">
 <div class="widget gallery">
 <!-- <div class="wsubtitle">Contact us</div> -->
-<h3 class="widget_title">Contact us</h3>
-<div class="abIcon"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
-<div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: white;">info@quivertrustltd.com.ng</a></div>
-<div class="abIcon"><i class="twi-phone"></i>+2348060875751</div>
+<h3 style="color: black;" class="widget_title">Contact us</h3>
+<div class="abIcon" style="color: black;"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
+<div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: #000;">info@quivertrustltd.com.ng</a></div>
+<div class="abIcon" style="color: black;"><i class="twi-phone"></i>+2348060875751</div>
 
 </div>
 </div>
