--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-  <img src="assets/images/service/4.png" alt>
+  <img src="assets/images/me/rmm.png" alt>
   </div>
-  <h3><a href="single-service.html">Borrowing</a></h3>
+  <h3><a href="single-service.html">Loans</a></h3>
   <p>Invest in your dreams with our finance solutions.</p>
   
   </div>
@@ -466,7 +466,7 @@ ul class="sub-menu">
         <div class="interactive-card">
             <div>
                 <h5 class="title">We’re All About Your Goals </h5>
-                <p class="text">Set Them, Reach Them!.</p>
+                <p class="text">Set Them, Reach Them!</p>
                 <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
@@ -685,7 +685,7 @@ ul class="sub-menu">
 <div class="container largeContainer">
 <div class="row">
 <div class="col-lg-12 text-center">
-<h2 class="secTitle">Unlock your dreams with the best loan solutions.</h2>
+<h2 class="secTitle" style="text-align: left;">Unlock your dreams with the best loan solutions.</h2>
 </div>
 </div>
 </div>
@@ -696,23 +696,23 @@ ul class="sub-menu">
 <div class="col-lg-12">
 <div class="consultArea">
 <div class="row">
-<div class="col-lg-7">
+<div class="col-lg-6">
 <!-- <a href="as" class="popup_video"><i class="twi-play"></i></a> -->
-<h3>Affordable loans tailored just for you.</h3>
-<div class="happyClinets">
-<div class="cThumb">
-<!-- <img src="assets/images/me/womanhead.webp" alt>
+<h3 style="text-align: left;">Affordable loans tailored just for you.</h3>
+<!-- <div class="happyClinets"> -->
+<!-- <div class="cThumb">
+<img src="assets/images/me/womanhead.webp" alt>
 <img src="assets/images/me/head1.webp" alt>
-<img src="assets/images/me/womanhead2.webp" alt> -->
-</div>
-<div class="hcCon">
+<img src="assets/images/me/womanhead2.webp" alt>
+</div> -->
+<!-- <div class="hcCon">
 <h5 style="text-align: center;">Rated</h5>
 <p><i class="twi-star"></i><i class="twi-star"></i><i class="twi-star"></i><i class="twi-star"></i><i class="twi-star"></i></p>
+</div> -->
+<!-- <i class="twi-check-circle1"></i> -->
+<!-- </div> -->
 </div>
-<i class="twi-check-circle1"></i>
-</div>
-</div>
-<div class="col-lg-5">
+<div class="col-lg-6">
 <div class="contact_form">
 <h5>Get Started with</h5>
 <p>Quiver Trust Limited</p>
