--- a/about1.html
+++ b/about1.html
@@ -709,7 +709,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <li><a style="color: black;" href="index.html">HOME</a></li>
     <li><a style="color: black;" href="about1.html">ABOUT</a></li>
     <li><a style="color: black;" href="service1.html">SERVICES</a></li>
-    <li><a style="color: black;" href="FAQs.html">FAQs</a></li>
+    <!-- <li><a style="color: black;" href="FAQs.html">FAQs</a></li> -->
     <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
     </ul>
     </div>
