--- a/index.html
+++ b/index.html
@@ -1436,7 +1436,7 @@ We craft unique digital experiences. With more than 7 years of expertise we desi
 <li><a style="color: black;" href="index.html">HOME</a></li>
 <li><a style="color: black;" href="about1.html">ABOUT</a></li>
 <li><a style="color: black;" href="service1.html">SERVICES</a></li>
-<li><a style="color: black;" href="FAQs.html">FAQs</a></li>
+<!-- <li><a style="color: black;" href="FAQs.html">FAQs</a></li> -->
 <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
 </ul>
 </div>
