--- a/service1.html
+++ b/service1.html
@@ -902,7 +902,7 @@
     <li><a style="color: black;" href="index.html">HOME</a></li>
     <li><a style="color: black;" href="about1.html">ABOUT</a></li>
     <li><a style="color: black;" href="service1.html">SERVICES</a></li>
-    <li><a style="color: black;" href="FAQs.html">FAQs</a></li>
+    <!-- <li><a style="color: black;" href="FAQs.html">FAQs</a></li> -->
     <!-- <li><a href="javascript:void(0);">BLOG</a></li> -->
     </ul>
     </div>
