--- a/index.html
+++ b/index.html
@@ -424,9 +424,11 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-  <img src="assets/images/me/rmm.png" alt>
+    <img style='margin-bottom: 200px ' src="assets/images/me/loanbb.png" alt>
+
+
   </div>
-  <h3><a href="single-service.html">Loans</a></h3>
+  <!-- <h3><a href="single-service.html">Loans</a></h3> -->
   <p>Invest in your dreams with our finance solutions.</p>
   
   </div>
@@ -444,16 +446,16 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-  <img src="assets/images/service/6.png" alt>
+    <img style='margin-bottom: 200px ' src="assets/images/me/bbresize.png" alt>
   </div>
-  <h3><a href="single-service.html">Business Advisory</a></h3>
+  <!-- <h3><a href="single-service.html">Business Advisory</a></h3> -->
   <p> Your expert partners for your successful business.</p>
   
   </div>
   </div>
   </div>
   </div>
-  </section>
+</section>
 
 
 
