--- a/about1.html
+++ b/about1.html
@@ -84,17 +84,20 @@
 .svg-path {
     stroke: #ADD8E6;
 }
+ 
+
+@media(min-width: 450px) {
+    :root{
+        width: 100%;
+    }
+}
+
 
 .img-card img {
     width: 80px;
     height: auto;
 }
-@media (max-width: 767px) {
-    .navbar01 {
-        padding: 0 15px;
-        width: 445px;
-    }
-}
+
 
 
 </style>
@@ -507,7 +510,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <div class="col-lg-6 col-md-6">
 <div class="service_item_10">
 <div class="ibMeta">
-<img style='margin-bottom: 200px ' src="assets/images/me/loanbb.png" alt>
+<img style='margin-bottom: 200px ' src="assets/images/me/LL (1).png" alt>
 
 </div>
 <!-- <h3><a href="single-service.html">Loans</a></h3> -->
@@ -528,7 +531,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 <div class="col-lg-6 col-md-6">
 <div class="service_item_10">
 <div class="ibMeta">
-<img style='margin-bottom: 200px ' src="assets/images/me/bbresize.png" alt>
+<img style='margin-bottom: 200px ' src="assets/images/me/LL (2).png" alt>
 
 </div>
 <!-- <h3><a href="single-service.html">Business Advisory</a></h3> -->
