--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
     font-weight: bold;
     color: #fff; /* Dark blue color */
 }
+
+
 </style>
 <script>
     function calculateLoan() {
@@ -424,9 +426,7 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-    <img style='margin-bottom: 200px ' src="assets/images/me/loanbb.png" alt>
-
-
+    <img style='margin-bottom: 200px ' src="assets/images/me/LL (1).png" alt>
   </div>
   <!-- <h3><a href="single-service.html">Loans</a></h3> -->
   <p>Invest in your dreams with our finance solutions.</p>
@@ -446,9 +446,10 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-    <img style='margin-bottom: 200px ' src="assets/images/me/bbresize.png" alt>
+    <img style='margin-bottom: 200px ' src="assets/images/me/LL (2).png" alt>
   </div>
   <!-- <h3><a href="single-service.html">Business Advisory</a></h3> -->
+  
   <p> Your expert partners for your successful business.</p>
   
   </div>
@@ -480,8 +481,8 @@ ul class="sub-menu">
             <!-- <div class="img-card">
                 <img src="assets/images/me/mmmm.webp" alt="Savings">
             </div> -->
-        </div>
-    </div>
+         </div>
+       </div>
     </div>
     <div class="col-lg-4 col-md-6">
       <div class="container mt-5">
@@ -503,6 +504,7 @@ ul class="sub-menu">
         </div>
     </div>
       </div>
+    </div>
       <div class="col-lg-4 col-md-6">
         <div class="container mt-5">
           <div class="interactive-card">
@@ -523,7 +525,6 @@ ul class="sub-menu">
           </div>
       </div>
     </div>
-    
     </div>
     <div class="row">
       <div class="col-lg-4 col-md-6">
