--- a/about1.html
+++ b/about1.html
@@ -260,7 +260,7 @@
         </ul> -->
         </li>
         <li id="contact-menu" class="">
-            <a href="contact.html">CONTACT</a>
+            <a href="contact.html">CONTACT US</a>
             <!-- <ul class="sub-menu">
             <li class="menu-item-has-children">
             <a href="javascript:void(0);">Portfolio Page</a>
@@ -772,8 +772,8 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
     <!-- <div class="wsubtitle">Contact us</div> -->
     <h3 style="color: black;" class="widget_title">Contact us</h3>
     <div class="abIcon" style="color: black;"><i class="twi-map-marker"></i> 9b Ibironke Crescent  Mende, Maryland, Lagos.</div>
-    <div class="abIcon"><i class="twi-envelope"></i><a href="https://themewar.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: #000;">info@quivertrustltd.com.ng</a></div>
-    <div class="abIcon" style="color: black;"><i class="twi-phone"></i>+2348060875751</div>
+    <div class="abIcon"><i class="twi-envelope"></i><a href="mailto:info@quivertrustltd.com.ng" class="__cf_email__" data-cfemail="580b2d2828372a2c183c3735393136763b3735" style="color: #000;">info@quivertrustltd.com.ng</a></div>
+    <div class="abIcon" style="color: black;"><i class="twi-phone"></i><a href="tel:+2348060875751">+2348060875751</a></div>
     
     </div>
     </div>
