--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     }
 </script>
 </head>
-<body>
+<body style='width: 100%;'>
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
