--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
     color: #fff; /* Dark blue color */
 }
 
+@media only screen and (max-width: 430px) {
+    #image_banner_need{
+        display: none !important;
+    
+        
+    }
+}
+
 
 </style>
 <script>
@@ -105,7 +113,7 @@
     }
 </script>
 </head>
-<body style='width: 100%;'>
+<body style='width: 100%; '>
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
@@ -392,7 +400,7 @@ ul class="sub-menu">
 <div id="rev_slider_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.4.1">
 <ul>
 <li data-index="rs-3049" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
-<img src="assets/images/bg/6.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+<img  id="image_banner_need" src="assets/images/b/6.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
 <div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solutions</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:2000,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;x:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;x:50px;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="prcolor">Welcome to Quiver Trust Limited </span>
@@ -405,7 +413,7 @@ ul class="sub-menu">
 </div>
 </li>
 <li data-index="rs-3050" data-transition="random-premium" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1000" data-thumb data-rotate="0" data-saveperformance="off" data-title data-param1 data-param2 data-param3 data-param4 data-param5 data-param6 data-param7 data-param8 data-param9 data-param10 data-description>
-<img src="assets/images/bg/8.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
+<img id="image_banner_need" src="assets/images/b/8.jpg" alt="berpo" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="0" class="rev-slidebg" data-no-retina>
 <div class="tp-caption ws_nowrap text-uppercase" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0']" data-y="['middle']" data-voffset="['-70','-70','-70','-100']" data-fontsize="['14','14','14','14']" data-fontweight="700" data-lineheight="['28']" data-letterspacing="2.8" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#bb0b0b']" data-type="text" data-responsive_offset="on" data-frames="[{&quot;delay&quot;:1500,&quot;speed&quot;:400,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"><span class="bg">Microfinance Solutions</span>
 </div>
 <div class="tp-caption headFont ws_nowrap" data-x="['right', 'right', 'center', 'center']" data-hoffset="['0', '0', '0', '0']" data-y="['middle']" data-voffset="['34','44','40','10']" data-fontsize="['70','60','55','40']" data-fontweight="700" data-lineheight="['80','70','65','50']" data-width="['670','100%','100%','100%']" data-height="['auto']" data-whitesapce="['normal']" data-color="['#ffffff']" data-type="text" data-responsive_offset="off" data-frames="[{&quot;delay&quot;:1800,&quot;speed&quot;:500,&quot;frame&quot;:&quot;0&quot;,&quot;from&quot;:&quot;y:50px;opacity:0;&quot;,&quot;to&quot;:&quot;o:1;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;},{&quot;delay&quot;:&quot;wait&quot;,&quot;speed&quot;:300,&quot;frame&quot;:&quot;999&quot;,&quot;to&quot;:&quot;opacity:0;&quot;,&quot;ease&quot;:&quot;power3.inOut&quot;}]" data-textAlign="['left', 'left', 'center', 'center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,50,20]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,300,50,20]"> <span class="prcolor">Empower Your Dreams  with Easy Financing</span>
