--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@ element.style{
 }
 
 @media only screen and (max-width: 430px) {
-    
+    body{
+        width: 500px;
+    }
 }
 
 
@@ -127,7 +129,7 @@ element.style{
     }
 </script>
 </head>
-<body style='width: 100%; '>
+<body>
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
