--- a/service1.html
+++ b/service1.html
@@ -84,12 +84,23 @@
 }
 
 
+@media screen and (max-width: 430px) {
+    body{
+        width: 100%;
+    }
+    .page_banner{
+        width: 500px !important;
+    }
+}
+
+
+
 </style>
 
 
 
 </head>
-<body>
+<body style="width: 100%;">
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
@@ -393,7 +404,7 @@
         <div class="interactive-card">
             <div>
                 <h5 class="title">Loan </h5>
-                <p class="text">At Quiver Trust, we provide flexible loan options designed to meet your financial needs, whether it’s for personal goals, business expansion, or unexpected expenses. Our transparent processes and competitive rates ensure a smooth borrowing experience for all our clients.</p>
+                <p style="text-align: justify;" class="text">At Quiver Trust, we provide flexible loan options designed to meet your financial needs, whether it’s for personal goals, business expansion, or unexpected expenses. Our transparent processes and competitive rates ensure a smooth borrowing experience for all our clients.</p>
                 <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
@@ -413,7 +424,7 @@
         <div class="interactive-card">
             <div>
                 <h5 class="title">Business Advisory</h5>
-                <p class="text">At Quiver Trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business advisory services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
+                <p style="text-align: justify;" class="text">At Quiver Trust, we understand that navigating the complexities of today’s business environment requires expert guidance and innovative solutions. Our business advisory services are designed to help organizations of all sizes overcome challenges, optimize operations, and achieve sustainable growth.</p>
                 <!-- <div class="sub-title">
                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15 10L20 15L15 20" stroke="#003399" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="svg-path"></path>
