--- a/about1.html
+++ b/about1.html
@@ -99,10 +99,21 @@
 }
 
 
+@media screen and (max-width: 430px) {
+    body{
+        width: 100%;
+    }
+    .page_banner{
+        width: 500px !important;
+    }
+}
+
+
+
 
 </style>
 </head>
-<body>
+<body style="width: 100%;">
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
