--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,23 @@
       font-weight: bold;
       color: #fff; /* Dark blue color */
   }
+
+  
+@media screen and (max-width: 430px) {
+    body{
+        width: 100%;
+    }
+    .page_banner{
+        width: 500px !important;
+    }
+}
+
+
 </style>
 
 
 </head>
-<body>
+<body style="width: 100%">
 
 <div class="preloader clock text-center">
 <div class="queraLoader">
