--- a/about1.html
+++ b/about1.html
@@ -106,6 +106,12 @@
     .page_banner{
         width: 500px !important;
     }
+    .aboutPageSection01{
+        margin: 0 auto !important;
+    }
+    .footer_01{
+       margin: 0 auto !important; 
+    }
 }
 
 
