--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,12 @@
     .page_banner{
         width: 500px !important;
     }
+    .contactPage{
+      margin: 0 auto !important;
+    }
+    .footer_01{
+      margin: 0 auto !important;
+    }
 }
 
 
