--- a/service1.html
+++ b/service1.html
@@ -91,6 +91,12 @@
     .page_banner{
         width: 500px !important;
     }
+    .service_section_09{
+        margin: 0 auto !important;
+    }
+    .footer_01{
+        margin: 0 auto !important;
+    }
 }
 
 
