--- a/service1.html
+++ b/service1.html
@@ -96,6 +96,7 @@
     }
     .footer_01{
         margin: 0 auto !important;
+        width: 500px;
     }
     .largeContainer{
         width: 500px;
