--- a/about1.html
+++ b/about1.html
@@ -405,7 +405,7 @@
 </section>
 
 
-<section class="page_banner" style="background-image: url(assets/images/bg/6.png);">
+<section class="page_banner" style="background-image: url(assets/images//6.png);">
 <div class="overla"></div>
 <div class="container largeContainer">
 <div class="row">
@@ -551,7 +551,7 @@ Our current focus is investing in Micro, Small, and Medium Enterprises (MSMEs), 
 
 
 <div class="card" style="width: 32rem; margin: auto;">
-    <img class="card-img-top" src="assets/images/me/ceo.jpg" alt="Card image cap">
+    <img class="card-img-top" src="assets/images/me/noface.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title text-center">Olushola Alao 
         Chief Executive Officer</h5>
