--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-    <img style='margin-bottom: 200px ' src="assets/images/me/LL (1).png" alt>
+    <img style='margin-bottom: 200px ' src="assets/images/me/loanbb.png" alt>
   </div>
   <!-- <h3><a href="single-service.html">Loans</a></h3> -->
   <p>Invest in your dreams with our finance solutions.</p>
@@ -492,7 +492,7 @@ ul class="sub-menu">
   <div class="col-lg-6 col-md-6">
   <div class="service_item_10">
   <div class="ibMeta">
-    <img style='margin-bottom: 200px ' src="assets/images/me/LL (2).png" alt>
+    <img style='margin-bottom: 200px ' src="assets/images/me/badll.png" alt>
   </div>
   <!-- <h3><a href="single-service.html">Business Advisory</a></h3> -->
   
