--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,45 @@
 
 </style>
 
+<!-- form submission -->
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const form = document.getElementById('contact-form');
+            form.addEventListener('submit', function(event) {
+                event.preventDefault();
+                const formData = new FormData(form);
+                fetch('https://formspree.io/f/xnnvbpjp', {
+                    method: 'POST',
+                    body: formData,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                }).then(response => {
+                    if (response.ok) {
+                        alert('Email sent successfully!');
+                        form.reset();
+                        window.location.href = 'index.html'; // Redirect to home page
+                        // Or use window.location.href = window.location.pathname; to stay on the same page
+                    } else {
+                        response.json().then(data => {
+                            if (data.errors) {
+                                alert('Failed to send email: ' + data.errors.map(error => error.message).join(', '));
+                            } else {
+                                alert('Failed to send email.');
+                            }
+                        });
+                    }
+                }).catch(error => {
+                    alert('Failed to send email: ' + error.message);
+                });
+            });
+        });
+    </script>
+
+
+
+
 
 </head>
 <body style="width: 100%">
@@ -392,7 +431,7 @@
 <div class="col-xl-8">
 <div class="contact_form contactPageForm">
 <h2 class="secTitle02">FeedBack</h2>
-<form action="#" method="post" class="row" id="contact_form">
+<form action="https://formspree.io/f/xnnvbpjp" method="post" class="row" id="contact-form">
 <div class="col-md-6">
 <input class="required" type="text" name="con_name" placeholder="Your Name *">
 <input class="required" type="email" name="con_email" placeholder="Email Address *">
@@ -460,7 +499,7 @@
   </div>
   <div class="col-lg-8 col-md-7">
   <div class="SubsrcribeForm">
-  <form class="yikes-easy-mc-form" action="#" method="post">
+  <form id="contact-form" class="yikes-easy-mc-form" action="https://formspree.io/f/xnnvbpjp" method="post">
   <input type="email" name="EMAIL" placeholder="Enter Your Email  for news letter">
   <button class="yikes-easy-mc-submit-button" type="submit">Submit</button>
   </form>
@@ -472,7 +511,7 @@
   </div>
   <div class="row">
   <div class="col-lg-12 text-center">
-  <div class="Copyright"><span>quivertrustltd</span> - Copyright 2025. Developed by <a href="#">Ogungbuyi victor</a></div>
+  <div class="Copyright"><span>quivertrustltd</span> - Copyright 2025. Developed by <a href="https://wa.me/2348145080787">Ogungbuyi victor</a></div>
   </div>
   </div>
   </div>
