--- a/service1.html
+++ b/service1.html
@@ -1108,7 +1108,7 @@
     </div>
     <div class="col-lg-8 col-md-7">
     <div class="SubsrcribeForm">
-    <form class="yikes-easy-mc-form" action="#" method="post">
+    <form id="contact-form" class="yikes-easy-mc-form" action="https://formspree.io/f/xnnvbpjp" method="post">
     <input type="email" name="EMAIL" placeholder="Enter Your Email Address for news letter">
     <button class="yikes-easy-mc-submit-button" type="submit">Submit</button>
     </form>
@@ -1120,7 +1120,7 @@
     </div>
     <div class="row">
     <div class="col-lg-12 text-center">
-    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2025. Developed by <a href="#">Ogungbuyi victor</a></div>
+    <div class="Copyright"><span>quivertrustltd</span> - Copyright 2025. Developed by <a href="https://wa.me/2348145080787">Ogungbuyi victor</a></div>
     </div>
     </div>
     </div>
